# evlog

./: CHANGES  COPYING  INSTALL  Makefile.am  Makefile.in  Makefile.rules  Makefile.vars  README  README.autoconf  README.ela  aclocal.m4  autogen.sh  bld_evlgentmpls.sh  bld_tcp_rmtlog_be.sh  bld_udp_rmtlog_be.sh  config.h.in  configure  configure.ac  evlog.spec  evlog.spec.in  setup
user/: Makefile.am  Makefile.in  Makefile.mk
user/cmd/: Makefile.am  Makefile.in  Makefile.mk
user/cmd/ela/: Makefile.am  Makefile.in  Makefile.mk  ela  ela_add.c  ela_console  ela_crt_rpt  ela_fake_event.c  ela_funcs  ela_funcs.in  ela_get_atts.c  ela_hw_alert  ela_remove  ela_remove_all  ela_show  ela_show_all  ela_sig  ela_sig_send.c  ela_vpd_funcs  ipr_opaque_alert  load_ela_rules.sh
user/cmd/ela/templates/: Makefile.am  Makefile.in  README  ela.h  evlog_env  template.awk  test_target.sh
user/cmd/ela/templates/bcm5700/: Makefile  bcm5700.pt
user/cmd/ela/templates/e100/: Makefile  e100.pt  template.awk
user/cmd/ela/templates/e1000/: Makefile  e1000.pt  template.awk
user/cmd/ela/templates/emulex/: Makefile  elx.pt  elx_opaque.t  elx_template.awk
user/cmd/ela/templates/ipr/: Makefile  ela_entry.t  ipr.pt  ipr_ela.h  ipr_opaque.t  ipr_rtable.awk  ipr_table.awk  ipr_table.pt  ipr_template.awk
user/cmd/ela/templates/olympic/: Makefile  (+1 more)
user/cmd/ela/test/: Makefile.am  Makefile.in  ela.h  ela_test1.sh  ela_test1.sh.in  ela_test2.sh  ela_test2.sh.in  elatest1.t  elatest2.t  log_evt_test1.sh  run_ela_tests.sh  run_ela_tests.sh.in
user/cmd/evlactiond/: Makefile.am  Makefile.in  Makefile.mk  action_profile  action_registry  evlactiond.c  evlactiond.h
user/cmd/evlconfig/: Makefile.am  Makefile.in  Makefile.mk  evlconfig.c  evlog.conf
user/cmd/evlfacility/: Makefile.am  Makefile.in  Makefile.mk  evlfacility.c
user/cmd/evlfacility/test/: Makefile.am  Makefile.in  test.sed  testfac1.sh  testfac1.tpl.out  testfac2.sh  testfac3.sh  testfac3.tpl.out
user/cmd/evlgentmpls/: Makefile.am  Makefile.in  Makefile.mk  evlgentmpls.c
user/cmd/evlnotify/: Makefile.am  Makefile.in  Makefile.mk  evlnotify.c
user/cmd/evlnotify/test/: Makefile.am  Makefile.in  actions.nfy  actions7.nfy  loadactions.sh  rmactions.sh  runacttests.sh  test1.sh  test2.sh  test3.sh  test4.sh  test4.sh.in  test5.sh  test6.sh  test7.sh
user/cmd/evlnotifyd/: Makefile.am  Makefile.in  Makefile.mk  evlnotifyd.c  evlnotifyd.h  serialize.c
user/cmd/evlnotifyd/test/: Makefile.am  Makefile.in  Makefile.mk  test.c  testclient.c  testnull.c
user/cmd/evlogd/: Makefile.am  Makefile.in  Makefile.mk  backendmgr.c  callback.h  evl_kernel.h  evlhosts  evlogd.c  evlogrmtd.c  evlogrmtd.conf  ksym.c  ksym_mod.c  ksyms.h
user/cmd/evlogd/shared/: rmt_common.c  rmt_common.h
user/cmd/evlogd/tcp_rmtlog_be/: Makefile.am  Makefile.in  tcp_rmtlog_be.c  tcp_rmtlog_be.conf  tcp_rmtlog_be.spec.in
user/cmd/evlogd/test/: Makefile.am  Makefile.in  Makefile.mk  testdup.c  testdup2.c  testdup3.c  testevlog1.out  testevlog1.sh
user/cmd/evlogd/udp_rmtlog_be/: Makefile.am  Makefile.in  udp_rmtlog_be.c  udp_rmtlog_be.conf  udp_rmtlog_be.spec.in
user/cmd/evlogmgr/: Makefile.am  Makefile.in  Makefile.mk  evl_logmgmt.c  evl_logmgmt.h  evlogmgr.c  evlogmgr.cron
user/cmd/evlogmgr/test/: Makefile.am  Makefile.in  logmgmt1.sh
user/cmd/evlsend/: Makefile.am  Makefile.in  Makefile.mk  evlsend.c
user/cmd/evltc/: Makefile.am  Makefile.in  Makefile.mk  evltc.c  funcs.c
user/cmd/evlview/: Makefile.am  Makefile.in  Makefile.mk  evlview.c  specfmt.c
user/include/: Makefile.am  Makefile.in  evl_common.h  evl_list.h  evl_template.h  evl_util.h  evlog.h  evlog.h.in  posix_evlog.h  posix_evlsup.h  scanner.h
user/include/linux/: Makefile.am  Makefile.in  evl_log.h
user/lib/: Makefile.am  Makefile.in  Makefile.mk  evl_log_write.c  facility_registry  facreg.c  formatrec.c  posix1.c  posix2.c  posix_evlsup.c  syslogat.c
user/lib/query/: Makefile.am  Makefile.in  Makefile.mk  evaluate.c  evl_parse.h  lex  lex.qq.c  normalize.c  q.tab.c  qopt.c  query.y
user/lib/template/: Makefile.am  Makefile.in  Makefile.mk  bvfmt.c  convert.c  lex.tt.c  serial.c  serialio.inc  template.c  tmplfmt.c  tmplgram.y  tmpllex.l  tmplmgmt.c  tt.tab.c  tt.tab.h
user/lib/test/: Makefile.am  Makefile.in  Makefile.mk  aligntest.c  aligntest.out  aligntest.sh  aligntest.t  aosApiTest.c  aosApiTest.out  aosApiTest.sh  aostest.c  aostest.out  aostest.sh  aostest.t  attttest.c  defaultTest.c  defaultTest.ia64.out  defaultTest.out  defaultTest.s390x.out  defaultTest.sh  defaultTest.t  degenerate.c  degenerate.out  degenerate.sh  degenerate.t  delimiter.c  delimiter.out  delimiter.sh  delimiter.t  dumpTest.c  evl_log_write.ia64.out  evl_log_write.out  evl_log_write.ppc.out  evl_log_write.s390x.out  evl_log_write2.out  evl_log_write_test.c  evl_log_write_test2.c  evl_log_write_test2.t  evlsend_b.sh  fmtTest.c  (+26 more)
user/lib/test/bitfields/: Makefile.am  Makefile.in  Makefile.mk  bftest.c  bftest.cpost  bftest.cpre  bftest.out  bftest.sh  bftest.t  bftest.tpre  bftestN.c  bftestS.c  bftestS.t  bftestSN.c  bftestSN.out  bftestSN.sh  bftestU.c  bftestUN.c  mkc.awk  mkt.awk  mktest.sh  rules
user/lib/test/facreg/: Makefile.am  Makefile.in  Makefile.mk  frtest2.c
user/lib/util/: Makefile.am  Makefile.in  Makefile.mk  evl_common.c  evl_list.c  fmtbuf.c  format.c  scanner.c
user/libevlsyslog/: Makefile.am  Makefile.in  Makefile.mk  libevlsyslog.c  slog_fwd
user/man/: Makefile.am  Makefile.in  Makefile.mk  evlconfig.1  evlconfig.1.in  evlfacility.1  evlgentmpls.1  evlgentmpls.1.in  evlnotify.1  evlnotify.1.in  evlog.1  evlog.1.in  evlogmgr.1  evlogmgr.1.in  evlquery.1  evlquery.1.in  evlremote.1  evlremote.1.in  evlsend.1  evlsend.1.in  evltc.1  evltc.1.in  evlview.1  evlview.1.in
user/sysfiles/: Makefile.am  Makefile.in
user/sysfiles/etc/: Makefile.am  Makefile.in
user/sysfiles/etc/init.d/: Makefile.am  Makefile.in  evlaction  evlnotify  evlog  evlog.in  evlogrmt
user/templates/: Makefile  Makefile.mk
user/templates/kern/: kern.t
user/templates/logmgmt/: Makefile  logmgmt.t
(+4 files in other folders)
